--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Your First and Last Name]</h1>
-            <h1>Preferred Name: [Your Preferred Name]</h1>
+            <h1>[Jacqueline Cervantes 
+            <h1>Preferred Name: [Jaky]</h1>
         </header>
 
         <section class="lewis">
