--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Your Years at Lewis]</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
+			<h2>This is my 4th year at Lewis I am currently a Senior </h2>
+			<h2>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in business administration]</h2>
 			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
         </section>
 
