--- a/index.html
+++ b/index.html
@@ -38,28 +38,33 @@
         <section class="lewis">
 			<h2>This is my 4th year at Lewis I am currently a Senior </h2>
 			<h2>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in business administration]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
+			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2> I have always loved to travel and loved to be at the
+		airport therefore I decided to chase a career in the field that I love the most which is aviation ! 
         </section>
 
 		<section class="course">
-            <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <h2>Reasons for Taking This Course</h2> it was one of the required courses that I needed to be able to graduate 
+            <p>[Your reasons for taking this course]</p> I needed to take this course in order to graduate 
         </section>
 
-		<section class="job">
-            <p>Current/Recent Job</p>
-			<p>[Your job responsibilities]</p>
+		<section class="job"> 
+            <p>Current/Recent Job</p> I currently work for United Airlines at Chicago ohare airport 
+			<p>[Your job responsibilities]</p> im a customer service representative and my job it specifically at the gates
+			I work arrivals which is meeting aircraft and connecting the jetbridge as well as departures which is boarding
+			all passengers that are traveling ! 
         </section>		
 
-        <section class="hobbies">
-            <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+        <section class="hobbies"> my hobbies include playing soccer or going out with my friends as well as going to church 
+            <h2>Hobbies and Special Interests</h2> Playing soccer and going out with my friends 
+            <p>[Your hobbies or special interests]</p> Going to church and being closer to God 
         </section>
 
         <section class="fun-fact">
-            <h2>Fun Fact</h2>
+            <h2>Fun Fact</h2> Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! I also lived in Mexico and 
+		came back when I was 10 years old ! I learned my Spanish in Mexico ! 
             <p>[A fun fact about yourself]</p>
-        </section>
+        </section> I speak 4 languages which are English, Spanish, Catalan, and Italian ! Im also learning to speak Arabic currently
+	    im learning to read it, write it and Speak it ! 
     </div>
 </body>
 </html>
