--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			all passengers that are traveling ! 
         </section>		
 
-        <section class="hobbies"> my hobbies include playing soccer or going out with my friends as well as going to church 
+        <section class="hobbies"> 
             <h2>Hobbies and Special Interests</h2> Playing soccer and going out with my friends 
             <p>[Your hobbies or special interests]</p> Going to church and being closer to God 
         </section>
