--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <header class="main-info">
             <h1>[Jacqueline Cervantes 
             <h1>Preferred Name: [Jaky]</h1>
+		    Jacquelinecervante@lewisu.edu
+		    Scrummyscrumbags 
         </header>
 
         <section class="lewis">
