--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
 
 		<section class="job"> 
-            <p>Current/Recent Job</p> I currently work for United Airlines at Chicago ohare airport 
+            <h2>Current/Recent Job</h2> I currently work for United Airlines at Chicago ohare airport 
 			<p>[Your job responsibilities]</p> im a customer service representative and my job it specifically at the gates
 			I work arrivals which is meeting aircraft and connecting the jetbridge as well as departures which is boarding
 			all passengers that are traveling ! 
