--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 		    Jacquelinecervante@lewisu.edu
 		    Scrummyscrumbags 
         </header>
-
+        <h2> Introduction</h2> Hello my name is Jaky I am 22 years old I love to play football as well as working in my dream job at United 
+	    airlines ! I am the third child of 5 meaning im right in between of my siblings ! I love aviation and traveling and that it one of
+	    reasons as to why I decided to study what I study ! 
+	    
         <section class="lewis">
 			<h2>This is my 4th year at Lewis I am currently a Senior </h2>
 			<h2>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in business administration]</h2>
