--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		<section class="course">
             <h2>Reasons for Taking This Course</h2> it was one of the required courses that I needed to be able to graduate 
             <p>[Your reasons for taking this course]</p> I needed to take this course in order to graduate 
+	    <h2>What I hope to learn this semester</h2> I really hope that I am able to learn more about programming and how to create files
+			to the best of my ability, I also plan on expanding my knowledge in the topic of computer science because to be honest
+			to me its not something that really interests me however after taking this course I understand its importance 
+			and my goal throughout the semester is to be able to fullfil this requierement 
         </section>
 
 		<section class="job"> 
