--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>		
 
         <section class="hobbies"> 
-            <h2>Hobbies and Special Interests</h2> Playing soccer and going out with my friends 
+            <h2> My Hobbies and Special Interests</h2> Playing soccer and going out with my friends 
             <p>[Your hobbies or special interests]</p> Going to church and being closer to God 
         </section>
 
