--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Jacqueline Cervantes 
+            <h1>Jakys introduction page 
             <h1>Preferred Name: [Jaky]</h1>
 		    Jacquelinecervante@lewisu.edu
 		    Scrummyscrumbags 
