--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>Jakys introduction page 
-            <h1>Preferred Name: [Jaky]</h1>
+            <h1>Jakys introductions website  
+            <h1>Preferred Name: Jaky</h1>
 		    Jacquelinecervante@lewisu.edu
 		    Scrummyscrumbags 
         </header>
