--- a/index.html
+++ b/index.html
@@ -33,19 +33,16 @@
         <header class="main-info">
             <h1>Jakys introductions website  
             <h1>Preferred Name: Jaky</h1>
-		    Jacquelinecervante@lewisu.edu
-		    Scrummyscrumbags 
+		    
         </header>
-        <h2> Introduction</h2> Hello my name is Jaky I am 22 years old I love to play football as well as working in my dream job at United 
-	    airlines ! I am the third child of 5 meaning im right in between of my siblings ! I love aviation and traveling and that it one of
-	    reasons as to why I decided to study what I study ! 
+        <h2>  ! 
 	    
         <section class="lewis">
 			<h2>This is my 4th year at Lewis I am currently a Senior </h2>
 			<h2>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in business administration]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2> I have always loved to travel and loved to be at the
+			<h2>Reasons for pursuing this degree:</h2> I have always loved to travel and loved to be at the
 		airport therefore I decided to chase a career in the field that I love the most which is aviation ! 
-        </section>
+        </section> 
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2> it was one of the required courses that I needed to be able to graduate 
