--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<section class="course">
             <h2>Reasons for Taking This Course</h2> it was one of the required courses that I needed to be able to graduate 
             <p>[Your reasons for taking this course]</p> I needed to take this course in order to graduate 
-	    <h2>What I hope to learn this semester</h2> I really hope that I am able to learn more about programming and how to create files
+	    <h2>What I hope to learn this semester:</h2> I really hope that I am able to learn more about programming and how to create files
 			to the best of my ability, I also plan on expanding my knowledge in the topic of computer science because to be honest
 			to me its not something that really interests me however after taking this course I understand its importance 
 			and my goal throughout the semester is to be able to fullfil this requierement 
@@ -57,14 +57,15 @@
 
 		<section class="job"> 
             <h2>Current/Recent Job</h2> I currently work for United Airlines at Chicago ohare airport 
-			<p>[Your job responsibilities]</p> im a customer service representative and my job it specifically at the gates
+			<p></p> Im a customer service representative and my job it specifically at the gates
 			I work arrivals which is meeting aircraft and connecting the jetbridge as well as departures which is boarding
 			all passengers that are traveling ! 
         </section>		
 
         <section class="hobbies"> 
-            <h2> My Hobbies and Special Interests</h2> Playing soccer and going out with my friends 
-            <p>[Your hobbies or special interests]</p> Going to church and being closer to God 
+            <h2> My Hobbies and Special Interests</h2> Playing soccer and going out with my friends I also enjoy going to church 
+		and being closer to God 
+            <p></p> 
         </section>
 
         <section class="fun-fact">
