--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
         <section class="fun-fact">
             <h2>Fun Fact</h2> Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! I also lived in Mexico and 
-		came back when I was 10 years old ! I learned my Spanish in Mexico ! 
-            <p>[A fun fact about yourself]</p>
-        </section> I speak 4 languages which are English, Spanish, Catalan, and Italian ! Im also learning to speak Arabic currently
-	    im learning to read it, write it and Speak it ! 
+		came back when I was 10 years old ! I learned my Spanish in Mexico ! I also speak 4 langugages which are English
+		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! 
+            <p></p>
+        </section> 
     </div>
 </body>
 </html>
