--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 	    
         <section class="lewis">
 			<h2>This is my 4th year at Lewis I am currently a Senior </h2>
-			<h2>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in business administration]</h2>
+			<h2>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in 
+				Business Administration]</h2>
 			<h2>Reasons for pursuing this degree:</h2> I have always loved to travel and loved to be at the
 		airport therefore I decided to chase a career in the field that I love the most which is aviation ! 
 		<h2>Introductions:Hello World! Im currently a Senior at Lewis University and I study Aviaition! I have 4 siblings which 
@@ -47,12 +48,14 @@
         </section> 
 
 		<section class="course">
-            <h2>Reasons for Taking This Course</h2> it was one of the required courses that I needed to be able to graduate 
-            <p>[Your reasons for taking this course]</p> I needed to take this course in order to graduate 
-	    <h2>What I hope to learn this semester:</h2> I really hope that I am able to learn more about programming and how to create files
-			to the best of my ability, I also plan on expanding my knowledge in the topic of computer science because to be honest
-			to me its not something that really interests me however after taking this course I understand its importance 
-			and my goal throughout the semester is to be able to fullfil this requierement 
+            <h2>Reasons for Taking This Course</h2> I needed to take this this course itwas one of the required courses that 
+			I needed in order to be able to graduate in May 
+            <p></p> 
+	    <h2>What I hope to learn this semester:</h2> I really hope that I am able to learn more about programming and how to 
+			create files to the best of my ability, I also plan on expanding my knowledge in the topic of 
+			computer science because to be honest to me its not something that really interests me however after 
+			taking this course I understand its importance and my goal throughout the semester is to be 
+			able to fullfil this requierement 
         </section>
 
 		<section class="job"> 
@@ -69,8 +72,9 @@
         </section>
 
         <section class="fun-fact">
-            <h2>Fun Fact</h2> Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! I also lived in Mexico and 
-		came back when I was 10 years old ! I learned my Spanish in Mexico ! I also speak 4 langugages which are English
+            <h2>Fun Fact</h2> Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! 
+		I also lived in Mexico and came back when I was 10 years old ! I learned my Spanish in Mexico ! 
+		I also speak 4 langugages which are English
 		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! 
             <p></p>
         </section> 
