--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <h2>  ! 
 	    
         <section class="lewis">
-			<h3>This is my 4th year at Lewis I am currently a Senior </h3>
-			<h3>Lewis major/minor/concentrations: [My Major is in Aviation Administration with a minor in 
-				Business Administration]</h3>
+			<p>This is my 4th year at Lewis I am currently a Senior </p>
+			<h3>Lewis major/minor/concentrations: My Major is in Aviation Administration with a minor in 
+				Business Administration</P3>
 			<h2>Reasons for pursuing this degree:</h2> I have always loved to travel and loved to be at the
 		airport therefore I decided to chase a career in the field that I love the most which is aviation ! 
 		<h2>Introductions:Hello World! Im currently a Senior at Lewis University and I study Aviaition! I have 4 siblings which 
