--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! 
             <p></p>
         </section> 
-    </div>
+    </div> Last updated on 2/26/2025
+	My discord name is jaky069 
 </body>
 </html>
