--- a/index.html
+++ b/index.html
@@ -79,6 +79,5 @@
             <p></p>
         </section> 
     </div> Last updated on 2/26/2025
-	My discord name is jaky069 
-</body>
+	My discord name is jaky069 <a href="jacquelinecervante@lewisu.edu">email</a>
 </html>
