--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 		I also speak 4 langugages which are English
 		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! 
             <p></p>
-        </section> 
-    </div> Last updated on 2/26/2025
+        </section>
+	Last updated on 2/26/2025
 	My discord name is jaky069 <a href="jacquelinecervante@lewisu.edu">email</a>
+    </div> 
 </html>
