--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="main-info">
             <h1>Jakys introductions website  
             <h1>Preferred Name: Jaky</h1>
-	    <img scr="picture.JPG" alt="Picture">   
+	    <img scr="https://github.com/jaky069/MEE/blob/main/picture.JPG" alt="Picture">   
         </header>
         
 	    
