--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 				Business Administration</P3>
 			<h2>Reasons for pursuing this degree:</h2> I have always loved to travel and loved to be at the
 		airport therefore I decided to chase a career in the field that I love the most which is aviation ! 
-		<h2>Introductions:Hello World! Im currently a Senior at Lewis University and I study Aviaition! I have 4 siblings which 
-		their names are Juan, Noelia , Nayeli, Ruby. I also have a beautiful niece and her name is Samara! </h2>
+		<h2>Introductions:</h2>
+		<p>Hello World! Im currently a Senior at Lewis University and I study Aviaition! I have 4 siblings which 
+		their names are Juan, Noelia , Nayeli, Ruby. I also have a beautiful niece and her name is Samara!</p> 
         </section> 
 
 		<section class="course">
