--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         </section>
 
         <section class="fun-fact">
-            <h2>Fun Fact</h2> Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! 
+            <h2>Fun Fact</h2> 
+            <p>Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! 
 		I also lived in Mexico and came back when I was 10 years old ! I learned my Spanish in Mexico ! 
 		I also speak 4 langugages which are English
-		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! 
-            <p></p>
+		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! </p>
         </section>
 	Last updated on 2/26/2025
 	My discord name is jaky069 <a href="jacquelinecervante@lewisu.edu">email</a>
