--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         .main-info h1 {
             margin: 0;
         }
-        .hobbies, .lewis, .course, .job {
-            background: #e7e7e7;
+        .hobbies, .lewis, .course, .job, .fun-fact {
+            background: #e7e7e7
             padding: 15px;
             margin-bottom: 10px;
         }
