--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>Jakys introductions website  
+            <h1>Jakys introductions website </h1>
             <h1>Preferred Name: Jaky</h1>
 	    <img src="https://github.com/jaky069/MEE/blob/main/picture.JPG" alt="testing">   
         </header>
