--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 	    <ul>
 		    <li>Watching Fc Barcelonas games </li>
 		        <ul>
-			    <li><a hre=https://www.youtube.com/watch?v=8Shmi4H8BCQ&t=5s" target="blank>Barcelona Game</a></li>
+			    <li><a href="https://www.youtube.com/watch?v=8Shmi4H8BCQ&t=5s" target="_blank">Barcelona Game</a></li>
 			</ul>
 		    <li>Waching Airplanes take off.</li>
 		        <ul>
-			     <li><a href="https://www.youtube.com/watch?v=h-4uiuz1kFU" target="blank">Airplane takeoff</a></li>	
+			     <li><a href="https://www.youtube.com/watch?v=h-4uiuz1kFU" target="_blank">Airplane takeoff</a></li>	
 			</ul>
 	</section>
 
@@ -121,6 +121,19 @@
 	
     </div> 
 
-    </script>
+    </script> 
+	const button = document.getElementById('toggleButton') ;
+	const text = document.getElementById('text') ;
+
+	button.addeventlistener('click' , () => {
+	 if (text.style.display = "block";
+	} else {
+	text.style.display = 'none';
+	}
+      } ));
+</script>
+
 	
+</body>
 </html>
+
