--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
 	    
         <section class="lewis">
-			<p>This is my 4th year at Lewis I am currently a Senior </p>
+			<h2>Year at Lewis:This is my 4th year at Lewis I am currently a Senior </h2>
 			<h3>Lewis major/minor/concentrations: My Major is in Aviation Administration with a minor in 
 				Business Administration</P3>
 			<h2>Reasons for pursuing this degree:</h2> I have always loved to travel and loved to be at the
