--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <body>
     <div class="container">
         <header class="main-info">
-	    <
-
+    <img src="https://github.com/jaky069/MEE/blob/ae694733d321b44c0fcd53ee32c3f00c49cf4952/picture%20about%20jaky%20_imresizer.jpg="Jaky"
+		style="display: block; Margin: 0 auto;">
 
 		<h1>Jacqueline Cervantes; Introductions Website</h1>
 		<h1>Preferred Name:Jaky</h1>
