--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <div class="container">
         <header class="main-info">
-    <[image alt](https://github.com/jaky069/MEE/blob/ae694733d321b44c0fcd53ee32c3f00c49cf4952/picture%20about%20jaky%20_imresizer.jpg)
+    <img src="me-300-by-300.jpg" alt="Jaky" style="display: block; margin: 0 auto;">
 		
 	    <h1>Jacqueline Cervantes; Introductions Website</h1>
 		<h1>Preferred Name:Jaky</h1>
