--- a/index.html
+++ b/index.html
@@ -120,3 +120,10 @@
 	
     </div> 
 
+    <script>
+	    function toggleDarkMode() {
+		document.body.classList.toggle('dark-mode');
+	    }
+    </ script>
+</body>
+</html>
