--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	    <ul>
 	    <li>I really hope that I am able to learn more about programming.</li>
 		    <li>How to create files.</li>
-		    <li>Exapanding my knowledge in Computer science</li>
+		    <li>Expanding my knowledge in Computer science</li>
 		    <li>Learn how to create a Website</li>
 	    </ul>
 	</section>
