--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
 	</section>
 	    <p>Last updated on 3/02/2025</p>
-	<p>My Discord name is jaky069 or you can <a href="mailto:jacquelinecervante@lewisu.edu">email me.</a></p>
+	<p>My Discord name is jaky069 as well as I provided my school email
+		so you can <a href="mailto:jacquelinecervante@lewisu.edu">email me.</a></p>
 	
     </div> 
 
