--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8282;
+            background-color: #ff8282;
             line-height: 1.6;
         }
         .container {
