--- a/index.html
+++ b/index.html
@@ -107,12 +107,14 @@
 	    
         <section class="fun-fact">
             <h2>Fun Fact</h2> 
-            <p>Im half Mexican and Half Spanish ! Also I have been playing soccer for 15 years ! 
-		I also lived in Mexico and came back when I was 10 years old ! I learned my Spanish in Mexico ! 
-		I also speak 4 langugages which are English
-		Spanish, Catalan and Italian and im also currently learning how to speak and write Arabic! </p>
-        
-	</section>
+	    <ul>
+	    <li>Im half Mexican and Half Spanish!</li>
+		    <li>I have been playing soccer (football) for 15 years! </li>
+		    <li>I lived in Mexico and learned my Spanish in Mexico</li>
+		    <li>I speak 4 languages English, Spanish, Catalan, Italian</li>
+		    <li>I am also currently learning how to Speak and write in Arabic</li>
+	    </ul>
+        </section>
 
 	</section>
 	    <p>Last updated on 3/02/2025</p>
