--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 		<section class="job"> 
             <h2>Current/Recent Job</h2> I currently work for United Airlines at Chicago ohare airport 
-			<p> Im a customer service representative and my job it specifically at the gates
+			<p> Im a Customer Service Representative and my job is specifically focused in the gates
 			I work arrivals which is meeting aircraft and connecting the jetbridge as well as departures which is boarding
 			all passengers that are traveling !</p>
         </section>		
