--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-	    <p>It&rsquo;s I needed to take this course it was one of the required courses that I needed in order to be able
-	    to graduate this May!</p> 
+	    <p>I&rsquo;s a required course that I needed to take in order to graduate this May!</p> 
 			
 	    <h3>What I hope to learn this semester:</h3> 
 	    <ul>
@@ -108,7 +107,7 @@
         <section class="fun-fact">
             <h2>Fun Fact</h2> 
 	    <ul>
-	    <li>Im half Mexican and Half Spanish!</li>
+	    <li>Im half Mexican and half Spanish!</li>
 		    <li>I have been playing soccer (football) for 15 years! </li>
 		    <li>I lived in Mexico and learned my Spanish in Mexico</li>
 		    <li>I speak 4 languages English, Spanish, Catalan, Italian</li>
