--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-	    <p>I&rsquo;s a required course that I needed to take in order to graduate this May!</p> 
+	    <p>It&rsquo;s a required course that I needed to take in order to graduate this May!</p> 
 			
 	    <h3>What I hope to learn this semester:</h3> 
 	    <ul>
