--- a/index.html
+++ b/index.html
@@ -18,32 +18,19 @@
             color: #fff;
             padding: 20px;
         }
-        .main-info h1 {
-            margin: 0;
-        }
-        .hobbies, .lewis, .course, .job, .fun-fact {
-            background: #ffe9ec;
-            padding: 15px;
-            margin-bottom: 10px;
-        }
-        Ul {
-            list-style-type: square;
-	}
-	button {
-     background-color: #ffe9ec;
-     color: black; 
-     font-size: 11px;
-     Border-radious:  8px;
-     cursor: pointer;
-     transition: background-color 0.3s ease;
-   }
-	
-   button:hover {
-     outline: black;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-   }
-   </style>
-		
+        
+	.Questions {
+           background: #f295cb;
+           color: #000000;
+           padding: 10px;
+           margin-top: 20px;
+       }
+        .center {
+           display: block;
+           margin-left: auto;
+           margin-right: auto;
+           width: 50%;
+}		
 </head>
 <body>
     <div class="container">
